--- a/estilo.css
+++ b/estilo.css
@@ -1,49 +1,30 @@
 body {
-    background-color: #0a8bec;
+    background-color: #A3DFF0;
 }
-ab {
-    display: inline-block;
-    background-color: #81b5dd;
-    box-shadow: 10px 15px #3b87c1;
-    border: 30px groove #005494;
-    box-sizing: border-box;
-    vertical-align: top;
-}
-b {
-    display: inline-block;
-    background-color: #81b5dd;
-    box-shadow: 10px 15px #3b87c1;
-    border: 30px groove #005494;
-    box-sizing: border-box;
-    vertical-align: top;
-}
-c {
-    display: inline-block;
-    background-color: #81b5dd;
-    box-shadow: 10px 15px #3b87c1;
-    border: 30px groove #005494;
-    box-sizing: border-box;
-    vertical-align: top;
-}
-d {
-    display: inline-block;
-    background-color: #81b5dd;
-    box-shadow: 10px 15px #3b87c1;
-    border: 30px groove #005494;
-    box-sizing: border-box;
-    vertical-align: top;
-}
-a {
-    display: inline-block;
-    background-color: #81b5dd;
-    box-shadow: 10px 15px #3b87c1;
-    border: 30px groove #005494;
-    box-sizing: border-box;
-}
-
 header {
     background-color: #237bbd;
     text-align: center;
-    box-shadow: 10px 15px #3b87c1;
     border: 30px groove #005494;
+    border-radius: 10px;
+}
+.container {
+    background-color: #b6e7f3;
+    display: flex;
+    flex-direction: row; 
+    border: 30px groove #005494;
+    border-radius: 20px;
+    padding: 10px;
+}
+.item {
+    display: inline-block;
+    background-color: #81b5dd;
+    border-color: #005494;
+    border-width: 5px;
+    border-style: solid;
+    border-radius: 10px;
+    box-sizing: border-box;
+    vertical-align: top;
+    width: 40%;
+    padding-left: 10px;
+    margin: 10px;
 }
